force-app/main/default/objects/forceDeleteConsumerSetting__c/forceDeleteConsumerSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Force Delete Consumer Setting</label>
</CustomObject>