force-app/main/default/objects/forceDeleteConsumerSetting__c/fields/Access_to_force_deletion_process__c.field-meta.xml
<CustomField>
    <fullName>Access_to_force_deletion_process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access to force deletion process</label>
    <type>Checkbox</type>
</CustomField>