force-app/main/default/objects/forceDeleteConsumerSetting__c/fields/Cannot_delete_0_points__c.field-meta.xml
<CustomField>
    <fullName>Cannot_delete_0_points__c</fullName>
    <label>Cannot delete 0&lt; points</label>
    <length>100</length>
    <type>Text</type>
</CustomField>