force-app/main/default/objects/forceDeleteConsumerSetting__c/fields/Confirmation_text__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_text__c</fullName>
    <label>Confirmation text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>