force-app/main/default/objects/forceDeleteConsumerSetting__c/fields/Insufficient_access_error__c.field-meta.xml
<CustomField>
    <fullName>Insufficient_access_error__c</fullName>
    <label>Insufficient access error</label>
    <length>100</length>
    <type>Text</type>
</CustomField>