force-app/main/default/objects/forceDeleteConsumerSetting__c/fields/Successfully_deleted_text__c.field-meta.xml
<CustomField>
    <fullName>Successfully_deleted_text__c</fullName>
    <label>Successfully deleted text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>